traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:43: error: Unmatched closing brace '}' ignored here
  }
  ^