traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
var compt:Int = 0
var x:Int = 0
var y:Int = 0
  var posFin:Boolean = false

override def run() {
  
 

  
  while(posFin != true){
    avancer()
    
  if(getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1){
      
  posFin = true;
    }
  }

}
  
def avancer(){
  
  //for (a <- 1 to 7){
    while (x <=7){
      ecritMessage(compt)
      compt=compt+1;
      x=x+1;
      setPos(x,y)
    }
    y=y+1;
    setPos(x,y)
    
    while (x >= 0){
      ecritMessage(compt)
      compt=compt+1;
      x=x-1;
      setPos(x,y)
    }
    y=y+1;
    setPos(x,y)
      
    //}
  }

 }